<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:background="#FFF"
>
    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/title_bg"
        android:padding="10px"
    >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
        >    
            <TextView 
                android:text="@string/about_title" 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFF"
                android:textSize="11pt"
                android:textStyle="bold"
            />  
        </LinearLayout>       
    </FrameLayout>  
    
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20px"
    >    
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/info"
            android:adjustViewBounds="true"
            android:layout_gravity="center_horizontal|center_vertical"
        />      
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about"
            android:textSize="6pt"
            android:textColor="#000"
            android:paddingLeft="20px"
        />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:gravity="center_vertical"
    >
        <ImageView
            android:layout_width="200px"
            android:layout_height="wrap_content"
            android:src="@drawable/logo_tan"
            android:adjustViewBounds="true"
        />    
        <ImageView
            android:layout_width="200px"
            android:layout_height="wrap_content"
            android:src="@drawable/logo_nod"
            android:adjustViewBounds="true"
        />
        <ImageView
            android:layout_width="200px"
            android:layout_height="wrap_content"
            android:src="@drawable/logo_nantes"
            android:adjustViewBounds="true"
        />        
    </LinearLayout>
    
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="20px"
        android:gravity="bottom|center_horizontal"
    >    
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/copyright1"
            android:textSize="5pt"
            android:textColor="#c7c8c6"
        />    
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/copyright2"
            android:textSize="5pt"
            android:textColor="#c7c8c6"
        />    
    </LinearLayout>
    
</LinearLayout>