<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:background="#FFF"
>
    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/title_bg"
        android:padding="10px"
    >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
        >    
            <TextView 
                android:text="@string/time_to_go_title" 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFF"
                android:textSize="11pt"
                android:textStyle="bold"
            />  
        </LinearLayout>        
    </FrameLayout>  
    
    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1"
        android:layout_marginTop="20px"
    >
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reminder_ligne_label"
                android:textColor="#000"
                android:background="@android:color/transparent"
                android:paddingLeft="20px"
            />
            <ImageView
                android:id="@+id/ligneNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:maxWidth="60px"
                android:adjustViewBounds="true"
                android:scaleType="fitEnd"
                android:paddingRight="20px"
            />
        </TableRow>        
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reminder_locationName_label"
                android:textColor="#000"
                android:background="@android:color/transparent"
                android:paddingLeft="20px"
            />
            <TextView
                android:id="@+id/locationName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:background="@android:color/transparent"
                android:gravity="right"
                android:textStyle="bold"
                android:paddingRight="20px"
            />            
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reminder_terminus_label"
                android:textColor="#000"
                android:background="@android:color/transparent"
                android:paddingLeft="20px"
            />
            <TextView
                android:id="@+id/terminus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:background="@android:color/transparent"
                android:gravity="right"
                android:textStyle="bold"
                android:paddingRight="20px"
            />
        </TableRow>
    </TableLayout>
    
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20px"
        android:gravity="center_horizontal|center_vertical"
    >    
        <TextView 
            android:id="@+id/message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:textStyle="bold"
            android:textSize="12pt"
            android:textColor="#000"
            android:gravity="center_vertical|center_horizontal"
        />
        <Button 
            android:id="@+id/close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20px"
            android:background="@drawable/cancel_alarm"
        />
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:textColor="#000"
            android:text="Stopper l'alarme"
        />        
    </LinearLayout>
</LinearLayout>