<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:background="#FFF"
>
    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/title_bg"
        android:padding="10px"
    >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
        >        
            <Button
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"            
                android:background="@drawable/back"
            />
        </LinearLayout>        
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
        >    
            <TextView 
                android:text="@string/reminder_title" 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFF"
                android:textSize="11pt"
                android:textStyle="bold"
            />  
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
        >        
            <Button
                android:id="@+id/reload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"            
                android:background="@drawable/reload"
            />
        </LinearLayout>        
    </FrameLayout>   

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1"
        android:layout_marginTop="20px"
    >
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reminder_ligne_label"
                android:textColor="#000"
                android:background="@android:color/transparent"
                android:paddingLeft="20px"
            />
            <ImageView
                android:id="@+id/ligneNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:maxWidth="60px"
                android:adjustViewBounds="true"
                android:scaleType="fitEnd"
                android:paddingRight="20px"
            />
        </TableRow>        
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reminder_locationName_label"
                android:textColor="#000"
                android:background="@android:color/transparent"
                android:paddingLeft="20px"
            />
            <TextView
                android:id="@+id/locationName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:background="@android:color/transparent"
                android:gravity="right"
                android:textStyle="bold"
                android:paddingRight="20px"
            />            
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reminder_terminus_label"
                android:textColor="#000"
                android:background="@android:color/transparent"
                android:paddingLeft="20px"
            />
            <TextView
                android:id="@+id/terminus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:background="@android:color/transparent"
                android:gravity="right"
                android:textStyle="bold"
                android:paddingRight="20px"
            />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reminder_wait_label"
                android:textColor="#000"
                android:background="@android:color/transparent"
                android:paddingLeft="20px"
            />
            <TextView
                android:id="@+id/wait"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:background="@android:color/transparent"
                android:gravity="right"
                android:textStyle="bold"
                android:paddingRight="20px"
            />
        </TableRow>
    </TableLayout>
    
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20px"
    >
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:text="Je serai alerté "
            android:textColor="#000"
        />
        <TextView
            android:id="@+id/remind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:textStyle="bold"
        />
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:text=" minute(s) avant le départ."
            android:textColor="#000"
        />
    </LinearLayout>
</LinearLayout>